# morning-digest

./: .dockerignore  .gitignore  Dockerfile  Procfile.txt  README.md  pyproject.toml  requirements.txt  setup.py
morning_digest/: cli.py  render.py
morning_digest/component/: __init__.py  base_component.py  component.py  monkeyuser.py  xkcd.py
morning_digest/source/: __init__.py  base_source.py  monkeyuser.py  xkcd.py
scripts/: run.sh  send.sh
tests/: test_morning_digest.py
